--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "mongoose": "^7.5.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
 }
