--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "http-errors": "^2.0.0",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
