--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@hapi/joi": "^17.1.1",
     "auto-bind": "^4.0.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
